# crender

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  LICENSE  README  README.md  bld.sh  bldJina2.sh  bldJinja2Cpp.sh  bldYaml-cpp.sh  updJinja2.sh
data/: cbc_linux-aarch64.yaml  cbc_linux-ppc64le.yaml  cbc_linux-s390x.yaml  cbc_osx-64.yaml
src/: lint.cc  main.cc  prepro.cc  prepro.h  version.cc  version.h  yaml.cc  yaml.h
src/data/: cbc_linux-64.yaml  cbc_osx-64.yaml  cbc_win-64.yaml
src/sb/: README.md
src/sb/filesystem/: executable_path.h
src/sb/filesystem/detail/: executable_path.ipp
